--- a/quiz-app/style.css
+++ b/quiz-app/style.css
@@ -141,3 +141,8 @@ body{
     background-position: right calc(0.375em + 0.1875rem) center;
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
+
+.inactive-button{
+	opacity:.8;
+	pointer-events: none;
+}
